syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service RegistraChaveService {
  rpc registrar (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service RemoveChaveService{
  rpc remover(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service CarregaChaveService{
  rpc carregar(CarregaChavePixRequest) returns (CarregaChavePixResponse) {}
}

enum TipoDeChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clientId = 1;
  string pixId = 2;
  string message = 3;
}

message CarregaChavePixRequest{
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro{
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message CarregaChavePixResponse{

  message ChavePix{

    message ContaInfo{
      TipoDeConta tipoDeConta = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoDeChave tipoDeChave = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadoEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}